# editorbot

./: .gitignore  .notes  CLAUDE.md  EVAL_INSTRUCTIONS.md  FEEDBACK_CYCLE_1_COMPLETE.md  FEEDBACK_DATA_FORMAT.md  HOW_TO_EVALUATE.md  HUMAN_FEEDBACK_PIPELINE.md  HUMAN_FEEDBACK_QUICK_START.md  README.md  RLHF_DELIVERY_SUMMARY.md  RLHF_EXECUTIVE_SUMMARY.md  RLHF_IMPLEMENTATION_CHECKLIST.md  RLHF_INTEGRATION_COMPLETE.md  RLHF_QUICK_COMMANDS.md  RLHF_QUICK_REFERENCE.md  RLHF_TRAINING_GUIDE.md  RLHF_TRAINING_SUMMARY.md  RLHF_WORKFLOW_COMPLETE.md  TRAINING_REPORT.md  _continue_to_phase2.py  _debug_effects.py  _generate_pointer_sequences.py  _test_anomaly_large.py  _test_anomaly_v2.py  _test_classifier.py  _test_full_song.py  _test_hardcoded_effects.py  _test_mel_to_mel_full.py  _test_mel_to_mel_inference.py  _test_phase2_inference.py  _train_anomaly_500.py  _train_audio_slicer_fast.py  _train_mel_to_mel.py  _train_phase1_v3.py  _train_phase2_fixed.py  _update_decoder.py  check_dims.py  check_style.py  cleanup_cache.py  (+23 more)
.github/: copilot-instructions.md
AIeditor/: add_hybrid.py  align_by_search.py  edit_policy.py  fast_features.py  simple_master.py  train_edit_policy.py  train_edit_policy_v10.py  train_edit_policy_v10_simple.py  train_edit_policy_v11.py  train_edit_policy_v13.py  train_edit_policy_v2.py  train_edit_policy_v3.py  train_edit_policy_v4.py  train_edit_policy_v5.py  train_edit_policy_v6.py  train_edit_policy_v7.py  train_edit_policy_v8.py  train_edit_policy_v9.py
audio_slicer/: IDEAS.md  README.md  __init__.py  _debug_audio_slicer.py  (+10 more)
experiment1/: README.md  main.py  pyproject.toml  requirements-natten.txt  requirements.txt  temp_run_demucs_check.py  train.py
experiment1/scripts/: check_env.py  install_env_deps.ps1  train_style_single.py
experiment1/src/ai/: arranger.py  editor.py  natten_wrapper.py  remixatron_adapter.py  remixatron_blend.py  trainer.py
experiment1/src/audio/: __init__.py  ai_blend.py  analyzer.py  effects.py  processor.py
experiment1/src/utils/: __init__.py  helpers.py
experiment1/tests/: temp_debug_blend.py  test_audio_analyzer_allin1.py  test_audio_analyzer_natten.py  test_blend_simulation.py  test_encoder_cuda_forward.py  test_natten_audio.py  test_natten_integration.py  test_remixatron_adapter_gap_heal.py  test_remixatron_adapter_gap_padding.py  test_remixatron_adapter_truncate.py  test_remixatron_demucs_and_maxjump.py  test_remixatron_e2e_gap_regression.py
experiment1/tools/: analyze_heal.py  inspect_heal.py
(+241 files in other folders)
